--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -27,3 +27,8 @@ html {
   font-size: 10rem;
   flex-flow: column;
 }
+@media only screen and (min-width: 600px) {
+  .discount {
+    display:none;
+  }
+}
