Edit class in css file

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -27,8 +27,11 @@ html {
   font-size: 10rem;
   flex-flow: column;
 }
+.discounts{
+  font-size: 10rem;
+}
 @media only screen and (min-width: 600px) {
-  .discount {
+  .discounts {
     display:none;
   }
 }
