--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -28,10 +28,10 @@ html {
   flex-flow: column;
 }
 .discounts{
-  font-size: 10rem;
+  display:none;
 }
-@media only screen and (min-width: 600px) {
+@media only screen and (max-width: 600px) {
   .discounts {
-    display:none;
+    display:all;
   }
 }
